# i-vis-api

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  TODO.rst  mypy.ini  pylintrc  request.json  requirements.txt  requirements.txt-BACKUP  setup.cfg  setup.py  test_dask.py
docs/: Makefile  conf.py  index.rst  links.rst
docs/cli_app/: plugin.rst
docs/config/: flask.rst  i_vis.rst  logging.rst
docs/extend/: core.rst  sources.rst
docs/install/: docker.rst  repository.rst
docs/old/: entities.tex  variant_types.tex
docs/plugins/: core.rst  sources.rst
i_vis/api/: __init__.py  __version__.py  arguments.py  config_utils.py  db_utils.py  df_utils.py  etl.py  fields.py  file_utils.py  forms.py  harmonizer.py  logging.yaml  models.py  plugin.py  plugin_exceptions.py  preon.py  query_utils.py  resource.py  schemas.py  utils.py
i_vis/api/cli/: __init__.py  backup.py  file.py  harmonization.py  plugin.py  reset.py  task.py  user.py  utils.py
i_vis/api/core_types/: utils.py  variant_utils.py
i_vis/api/core_types/cancer_type/: __init__.py  models.py  plugin.py  routes.py
i_vis/api/core_types/drug/: __init__.py  models.py  plugin.py  routes.py
i_vis/api/core_types/gene/: __init__.py  models.py  plugin.py  routes.py
i_vis/api/core_types/variant/: __init__.py  collector.py  harmonizer.py  models.py  plugin.py  routes.py
i_vis/api/data_sources/biomarkers/: __init__.py  plugin.py
i_vis/api/data_sources/chembl/: __init__.py  plugin.py
i_vis/api/data_sources/civic/: __init__.py  plugin.py
i_vis/api/data_sources/clinvar/: __init__.py  plugin.py
i_vis/api/data_sources/cosmic/: __init__.py  plugin.py
i_vis/api/data_sources/ctg/: __init__.py  plugin.py
i_vis/api/data_sources/dbnsfp/: __init__.py  plugin.py  tasks.py
i_vis/api/data_sources/dgidb/: __init__.py  plugin.py
i_vis/api/data_sources/disease_ontology/: __init__.py  plugin.py
i_vis/api/data_sources/docm/: __init__.py  plugin.py
i_vis/api/data_sources/drugbank/: __init__.py  plugin.py
i_vis/api/data_sources/ensembl_grch38/: __init__.py  ensembl.py  ensembl_gene_id.xml  ensembl_peptide_id.xml  ensembl_transcript_id.xml  gene_info.xml  gene_name.xml  plugin.py  (+1 more)
i_vis/api/routes/: admin.py  api.py
i_vis/api/task/: base.py  builder.py  extract.py  load.py  transform.py  utils.py  workflow.py
i_vis/api/terms/: __init__.py  disease.py  drug.py  evidence.py  gene.py  general.py  misc.py  reference.py  variant.py
tests/unit/: test_variant_utils.py
(+15 files in other folders)
