[metadata]
name = i_vis_api
description = This package installs, updates, and manages the Integrated Variant Information System (I-VIS)
long_description = file: README.md
long_description_content_type = "text/markdown",
author = Michael Piechotta
author_email = michael.piechotta@gmail.com
url= https://i-vis-api.readthedocs.org/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
license_file = LICENSE.txt
project_urls =
        Documentation = https://i-vis-api.readthedocs.org
        Source = https://github.com/piechottam/i-vis-api
        Project = https://predict.informatik.hu-berlin.de

[bdist_wheel]
universal = 1

[options]
include_package_data = True,
python_requires = ==3.9.10
zip_safe = False

[isort]
profile = black
known_first_party=i_vis.core

[mypy]
namespace_packages = True
explicit_package_bases = True
exclude = test_.*
python_version = 3.9
warn_unused_configs = True
disallow_any_generics = True
disallow_untyped_calls = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
strict_equality = True
plugins = sqlalchemy.ext.mypy.plugin

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-distributed.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-flask_login.*]
ignore_missing_imports = True

[mypy-flask_marshmallow.*]
ignore_missing_imports = True

[mypy-flask_wtf.*]
ignore_missing_imports = True

[mypy-wtforms.*]
ignore_missing_imports = True

[mypy-marshmallow_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_smorest.*]
ignore_missing_imports = True

[mypy-hgvs.*]
ignore_missing_imports = True

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-bioutils.*]
ignore_missing_imports = True

[mypy-cyvcf2.*]
ignore_missing_imports = True

[mypy-xmltodict.*]
ignore_missing_imports = True

[mypy-chembl_webresource_client.*]
ignore_missing_imports = True

[mypy-jellyfish.*]
ignore_missing_imports = True

[mypy-dask.*]
ignore_missing_imports = True

[mypy-pyarrow.*]
ignore_missing_imports = True

[mypy-colorlog.*]
ignore_missing_imports = True

